2005-09-17  Jon Ander Hernandez <hernandez@movimage.com>
	
	** Fixes bug #313118

	* calendar/gui/alarm-notify/alarm-notify-dialog.c 
	(add_alarm_to_notified_alarms_dialog): Don't use mark-up for
	translatable strings.

2006-01-24  Andre Klapper <a9016009@gmx.de>

	* gui/dialogs/meeting-page.c: removed surrounding
	markup. Fixes bug 313120. Committing on behalf of
	Pablo Arroyo.

2006-01-23  Andre Klapper <a9016009@gmx.de>

	* gui/e-day-view-time-item.c: added translator comment
	to a string. Fixes bug 328006.

2006-01-23  Andre Klapper <a9016009@gmx.de>

	* gui/print.c: added translator comments to workday
	abbreviations. Fixes bug 328007.

2006-01-23  Pavithran <pavithran@gmx.de>

	** Fixes bug #327713 , #327730
	
	* gui/dialogs/event-editor.c: (event_editor_construct):
	* gui/dialogs/task-editor.c: (task_editor_construct):
	Removes extra seperator. 
	
2006-01-23  Irene Huang <Irene.Huang@sun.com>

	Fixes #327958

	* gui/e-calendar-view.c: (e_calendar_view_get_tooltips):
	Check if ptr==NULL, for special occassion with SunOne 
	accouts.

2006-01-16  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #326478
	* gui/dialogs/cal-prefs-dialog.c: (spec_from_picker),
	(tasks_due_today_set_color), (tasks_overdue_set_color),
	(set_color_picker):
	* gui/dialogs/cal-prefs-dialog.glade: Changed the gtk color
	button to gnome color picker.

2006-01-20  Andre Klapper <a9016009@gmx.de>
	* gui/dialogs/task-page.c (field_changed_cb):
	Removed wrong parameter to be able compile again.

2006-01-17  Johnny Jacob <johnnyjacob@gmail.com>

	* gui/dialogs/event-page.c (edit_button_cb): Added.
	edit the selected attendee.
	(sensitize_widgets): enable/disable edit button and 
	Attendee list view.
	(button_press_event): don't popup the menu if editing is
	disabled.
	(get_widgets): get and connect signals for edit button

2006-01-19  Johnny Jacob  <johnnyjacob@gmail.com>

	Fixes #327487
	* gui/dialogs/cal-prefs-dialog.c (default_reminder_units_changed),